# dog-watch

./: .gitignore  CMakeLists.txt  Kconfig  README.rst  prj.conf
boards/: nrf9151dk_nrf9151_ns.overlay
inc/: sensor_data_collector.h  sensor_helpers.h
src/: icm_4268x.code-workspace  main.c  sensor_data_collector.c  sensor_data_consumer.c  sensor_helpers.c
